--- a/hw5/code/proj3.ipynb
+++ b/hw5/code/proj3.ipynb
@@ -398,16 +398,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fd1109d6d90>"
+       "<matplotlib.image.AxesImage at 0x7fd1107dcc50>"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -503,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "2.7.undefined"
   }
  },
  "nbformat": 4,
